<resources>
    <string name="app_name" translatable="false">What\'s My Next</string>
    <string name="interruptions_title">Interruptions</string>
    <string name="minutes">minutes</string>
    <string name="example_station" translatable="false">Garching, Forschungszentrum</string>
    <string name="example_delta" translatable="false">3</string>
    <string name="example_line" translatable="false">U6</string>
    <string name="refresh">Refresh</string>
    <string name="exclude">Exclude transport means…</string>
    <string name="selection_bus" translatable="false">bus_select</string>
    <string name="selection_ubahn" translatable="false">u_select</string>
    <string name="selection_sbahn" translatable="false">s_select</string>
    <string name="selection_tram" translatable="false">tram_select</string>
    <string name="selection_bahn" translatable="false">bahn_select</string>
    <string name="save_settings">Save</string>
    <string name="dismiss_settings">Dismiss</string>
    <string name="selection_station_in_menu" translatable="false">SELECTED_STATION</string>
    <string name="select_station_title">Select station…</string>
    <string name="custom_station_name_title">Enter custom station name…</string>
    <string name="default_custom_station_name" translatable="false">Hauptbahnhof</string>
    <string name="selection_custom_station_entry" translatable="false">CUSTOM_STATION_ENTRY</string>
    <string name="switch_view_button">Switch view…</string>
    <string name="interruptions_button">Show interruptions…</string>
    <string-array name="transport_keys">
        <item>BUS</item>
        <item>UBAHN</item>
        <item>SBAHN</item>
        <item>TRAM</item>
        <item>BAHN</item>
    </string-array>
    <string-array name="transport_means_readable">
        <item>Bus</item>
        <item>U-Bahn</item>
        <item>S-Bahn</item>
        <item>Tram</item>
        <item>Regionalbahn</item>
    </string-array>
    <string-array name="theme_selection_options">
        <item>@string/theme_selection_follow_system</item>
        <item>@string/theme_selection_day</item>
        <item>@string/theme_selection_night</item>
    </string-array>

    <string-array name="station_keys">
        <item>LOCATION</item>
        <item>de:09162:6</item> <!-- Hbf -->
        <item>de:09162:2</item> <!-- Marienplatz -->
        <item>de:09162:470</item> <!-- Fröttmaning -->
        <item>de:09184:460</item> <!-- Garching, Forschungszentr. -->
        <item>BY_NAME</item>
    </string-array>
    <string-array name="station_readable">
        <item>Current location</item>
        <item>Hauptbahnhof</item> <!-- Hbf -->
        <item>Marienplatz</item> <!-- Marienplatz -->
        <item>Fröttmaning</item> <!-- Fröttmaning -->
        <item>Garching, Forschungszentrum</item> <!-- Garching, Forschungszentr. -->
        <item>Choose by name…</item>
    </string-array>

    <string name="example_int_title" translatable="false">Hauptbahnhof bzw. Karlsplatz (Stachus) - Sendlinger Tor:
        Unterbrechung wegen
        Gleisbauarbeiten
    </string>
    <string name="example_int_duration" translatable="false">25.03.2020 - 26.03.2020</string>
    <string name="example_int_text" translatable="false">Wegen Gleisbauarbeiten im Bereich Sonnen-/Schwanthalerstraße
        ist der
        Streckenabschnitt Karlsplatz (Stachus) - Sendlinger Tor am Mittwoch, 25. März und Donnerstag, 26. März 2020 von
        ca. 01.40 bis 04.15 Uhr gesperrt. An der (H) Sendlinger Tor fahren die Tramlinien N17 > Effnerplatz und N27 >
        Großhesseloher Brücke in der Brunnenschleife (vor der Kirche) ab. Die NachtTram N17 ist zwischen den (H)
        Hauptbahnhof und Sendlinger Tor unterbrochen, dieser Abschnitt wird mit Ersatztaxis bedient. Die NachtTram N27
        ist zwischen den (H) Karlsplatz (Stachus) und Sendlinger Tor unterbrochen, in diesem Abschnitt nutzen Sie bitte
        die NachtBuslinien N40, N41 und N45. Die Züge in Richtung Petuelring fahren an der (H) Karlsplatz (Stachus) von
        der Halteposition 6 in der Prielmayerstraße ab.
    </string>
    <string name="example_int_mod_date" translatable="false">Stand: 2020-03-17 13:30 UTC</string>

    <string name="navbar_single">Next</string>
    <string name="navbar_list">Departures</string>
    <string name="navbar_route">Route</string>
    <string name="navbar_inter">Interruptions</string>
    <string name="label_stations">Stations</string>
    <string name="hint_from_input">From… (current location if empty)</string>
    <string name="hint_to_input">To…</string>
    <string name="label_time">Time</string>
    <string name="radio_departure">Departure</string>
    <string name="radio_arrival">Arrival</string>
    <string name="select_time_button">Select time…</string>
    <string name="go_button">Go</string>
    <string name="reset">Clear</string>
    <string name="now">Now</string>
    <string name="key_parameters" translatable="false">request_parameters</string>
    <string name="alternatives_title">Alternatives</string>
    <string name="itinerary_title">Itinerary</string>
    <string name="key_itinerary" translatable="false">route_itinerary</string>
    <string name="intermediate_stops_title">Intermediate stops</string>
    <string name="title_activity_routing_on_map">Route</string>
    <string name="key_route_map" translatable="false">route_for_map</string>
    <string name="key_route_station" translatable="false">station_for_map</string>
    <string name="pref_key_inter_filter" translatable="false">INTERRUPT_FILTER</string>
    <string name="pref_key_recents" translatable="false">RECENT_ROUTE_ENTRIES</string>
    <string name="recents_from_label">From:</string>
    <string name="recents_to_label">To:</string>
    <string name="label_recents">Recents</string>
    <string name="clear_recents_title">Clear recents?</string>
    <string name="clear_recents_message">Do you want to clear the recent routes?</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_departures_found">No departures found</string>
    <string name="inter_arrival_elem">"Arrival: "</string>
    <string name="inter_departure_elem">"; Departure: "</string>
    <string name="modification_date_prefix">"Updated: "</string>
    <string name="dialog_transport_means_title">Select means of transport…</string>
    <string name="interrupt_filter_hint">comma-separated lines…</string>
    <string name="interrupt_filter_title">Interruptions filter…</string>
    <string name="interrupt_filter_descr">Enter lines for interruptions…</string>
    <string name="loading_progress_dialog">Loading…</string>
    <string name="toast_nodestination">Destination is empty!</string>
    <string name="toast_invalid_input">Error! Invalid input</string>
    <string name="running_stops_infix">" stop(s), "</string>
    <string name="remove_recent_title">Remove element?</string>
    <string name="remove_recent_message">Do you want to remove this entry?</string>
    <string name="no_dept_details_avail">No details available</string>
    <string name="key_back_button_action_bar" translatable="false">show_back_button_in_bar</string>
    <string name="key_average_duration" translatable="false">average_duration_of_connections</string>
    <string name="key_display_expanded" translatable="false">show_expanded_running_view</string>
    <string name="key_show_station_detail" translatable="false">show_station_detail_on_map</string>
    <string name="warning_header">Warning</string>
    <string name="warning_long_travel_time">This connection has a significantly longer travel time than the
        alternatives. Consider re-checking travel options.
    </string>
    <string name="current_location">Current location</string>
    <string name="pref_key_stations" translatable="false">STATION_LIST</string>
    <string name="pref_key_selected_station_in_list" translatable="false">SELECTED_STATION_IN_LIST</string>
    <string name="remove_station_title">Remove station?</string>
    <string name="remove_station_message">Do you want to remove this station?</string>
    <string name="station_addition_hint">Station name</string>
    <string name="station_addition_title">Add station</string>
    <string name="station_addition_descr">Add a station to the list…</string>
    <string name="station_addition_error">The station name you entered does not exist!</string>
    <string name="cannot_delete_location">Current location cannot be deleted.</string>
    <string name="time_earlier">Earlier</string>
    <string name="time_later">Later</string>
    <string name="create_shortcut">Create shortcut…</string>
    <string name="create_shortcut_error">Cannot create a shortcut for this page.</string>
    <string name="key_station_from_shortcut" translatable="false">STATION_TO_SHOW</string>
    <string name="create_shortcut_not_supported">Shortcut creation is not supported by launcher.</string>
    <string name="create_shortcut_success">Shortcut created!</string>
    <string name="key_route_options_from_shortcut" translatable="false">ROUTE_OPTIONS_SHORTCUT</string>
    <string name="show_subway_map">Show subway map…</string>
    <string name="network_map_title">Subway map</string>
    <string name="channel_name" translatable="false">What\'s My Next</string>
    <string name="channel_description">Itinerary notifications for trips</string>
    <string name="send_notification">Send to notifications…</string>
    <string name="send_notification_error">Cannot send this to notifications.</string>
    <string name="no_connection">No connections found</string>
    <string name="tap_to_view_details">Tap to view alternatives</string>
    <string name="pref_key_selected_theme" translatable="false">SELECTED_THEME</string>
    <string name="switch_theme">Switch theme…</string>
    <string name="theme_selection_follow_system">System default</string>
    <string name="theme_selection_day">Light</string>
    <string name="theme_selection_night">Dark</string>
    <string name="switch_theme_title">Switch theme</string>
    <string name="location_rationale_title">Location permission</string>
    <string name="location_rationale_message">Location permission is needed for fetching departures from stations close
        to you.
    </string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="pref_key_location_already_requested" translatable="false">LOCATION_ALREADY_REQUESTED</string>
    <string name="continue_dialog">Continue</string>
    <string name="location_permission_denied">No location permission granted</string>
    <string name="all_lines">All</string>
</resources>
