<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/refresh_button"
            android:title="@string/refresh"
            app:showAsAction="always"
            android:icon="@drawable/ic_refresh"
    />
    <item
        android:id="@+id/exclude_button"
        android:title="@string/exclude"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_excluded"
    />
    <item
            android:id="@+id/show_subway_map_button"
            android:title="@string/show_subway_map"
            app:showAsAction="never"
            android:icon="@drawable/ic_document"
    />
    <item
            android:id="@+id/create_shortcut_button"
            android:title="@string/create_shortcut"
            app:showAsAction="never"
            android:icon="@drawable/ic_create_shortcut"
    />
    <item
            android:id="@+id/send_notification_button"
            android:title="@string/send_notification"
            app:showAsAction="never"
            android:icon="@drawable/ic_notify"
    />
    <item
            android:id="@+id/switch_theme_button"
            android:title="@string/switch_theme"
            app:showAsAction="never"
            android:icon="@drawable/ic_switch_theme"
    />
</menu>