<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RoutingEntryActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/mvg_1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/label_stations"
            android:text="@string/label_stations"
    />

    <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintTop_toBottomOf="@id/label_stations"
            app:layout_constraintLeft_toLeftOf="parent"
            android:backgroundTint="@color/mvg_1"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/hint_from_input"
            android:id="@+id/from_station_input"
    />

    <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/mvg_1"
            app:layout_constraintTop_toBottomOf="@id/from_station_input"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/hint_to_input"
            android:id="@+id/to_station_input"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/to_station_input"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/mvg_1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/label_time"
            android:text="@string/label_time"
    />
    
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toTopOf="@id/select_time_button"
            app:layout_constraintBottom_toBottomOf="@id/select_time_button"
            android:gravity="center_horizontal"
            android:layout_marginStart="20dp"
            app:layout_constraintLeft_toRightOf="@id/select_time_button"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:id="@+id/dept_arr_radio_group"
    >
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_departure"
                android:id="@+id/radio_dept"
                android:checked="true"
                android:buttonTint="@color/mvg_1"
        />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_arrival"
                android:id="@+id/radio_arr"
                android:checked="false"
                android:buttonTint="@color/mvg_1"
        />
    </RadioGroup>

    <TextView
            android:id="@+id/selected_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            app:layout_constraintLeft_toLeftOf="@id/dept_arr_radio_group"
            app:layout_constraintRight_toRightOf="@id/dept_arr_radio_group"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="@id/label_time"
            app:layout_constraintBottom_toBottomOf="@id/label_time"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_time"
            app:layout_constraintRight_toLeftOf="@id/dept_arr_radio_group"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:id="@+id/select_time_button"
            android:backgroundTint="@color/mvg_1"
            android:textColor="@color/white"
            android:text="@string/select_time_button"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="10dp"
    />

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dept_arr_radio_group"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/flip_button"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:id="@+id/go_button"
            android:backgroundTint="@color/mvg_1"
            android:textColor="@color/white"
            android:text="@string/go_button"
            android:drawableStart="@drawable/ic_routing"
    />

    <Button
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/go_button"
            app:layout_constraintLeft_toRightOf="@id/go_button"
            app:layout_constraintRight_toLeftOf="@id/reset_button"
            android:id="@+id/flip_button"
            android:backgroundTint="@color/mvg_1"
            android:drawableStart="@drawable/ic_flip"
    />

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/go_button"
            app:layout_constraintLeft_toRightOf="@id/flip_button"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="15dp"
            android:id="@+id/reset_button"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/reset"
            android:drawableStart="@drawable/ic_clear"
    />



    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_nav_bar_routing_entry"
            app:menu="@menu/nav_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:labelVisibilityMode="labeled"
    />


</androidx.constraintlayout.widget.ConstraintLayout>