<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background"
        android:background="@color/white"
        tools:context=".activities.DepartureSingleActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pull_to_refresh"
            app:layout_constraintBottom_toTopOf="parent">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_line"
            android:textColor="@color/white"
            android:id="@+id/line"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/inMinutes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_station"
            android:textColor="@color/white"
            android:id="@+id/direction"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/inMinutes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_delta"
            android:textColor="@color/white"
            android:id="@+id/inMinutes"
            android:textSize="200sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textColor="@color/white"
            android:id="@+id/minutesTextBox"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar_single"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inMinutes"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_single_switch_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_switch_station_fab"
            android:tint="@color/white"
            android:backgroundTint="@color/mvg_1"
            app:rippleColor="@color/mvg_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar_single"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
    />

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_nav_bar_single"
            app:menu="@menu/nav_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:labelVisibilityMode="labeled"
    />
</androidx.constraintlayout.widget.ConstraintLayout>